# Hex_coder

./: README.md
Hex_coder/: Platform_common.c  Utils.h  Windows.c  main.c
src/: CMakeLists.txt  Linux.c  Platform_common.c  Utils.h  Windows.c  main.c
